--- a/style.css
+++ b/style.css
@@ -24,10 +24,32 @@ a{
   font-size: 15px;
 }
 /* Debug  */
-.debug .bk_top{
-  height: 400px;
+.debug .bk_section{
+  height: 700px;
   background-color: blue;
 }
+
+.debug .bk_section .container{
+  height: 700px;
+  background-color: red;
+}
+
+.debug .col_left{
+  width: 66.66%;
+  height: 700px;
+  background-color: rgba(255, 255, 255, 0.342);
+  float: left;
+  
+}
+
+.debug .col_right{
+  width: 33.33%;
+  height: 700px;
+  background-color: rgba(14, 166, 236, 0.87);
+  float: left;
+}
+
+
 
 
   
