--- a/style.css
+++ b/style.css
@@ -24,18 +24,7 @@ a{
   font-size: 15px;
 }
 /* Debug  */
-.debug .bk_section{
-  background-color: blue;
-}
-
-
-
-
-
-
-
-
-  
+ 
 
  
 /*Header*/
@@ -111,37 +100,36 @@ nav .logo , nav .login{
   color: white;
 }
 
-/* section_1 */
-.bk_section .container{
-  padding-top: 70px;
+/* section */
+.same .container{
+  padding: 70px 0;
 }
 
-.section_1 .col_left{
+.same .col_left, .section_2 .col_right{
   width: 66.66%;
   float: left;
 }
 
-.section_1 .col_right{
+.same .col_right, .section_2 .col_left{
   width: 33.33%;
   float: left;
 }
 
-.section_1 .col_right h2{
+.same .col_right h2, .section_2 .col_left h2{
   padding: 32px 32px 0;
   font-size: 40px;
 }
 
-.section_1 .col_right p{
+.same .col_right p, .section_2 .col_left p{
   padding: 16px 32px 32px;
   line-height: 23px;
-
 }
 
-/* .onda{
-  filter: grayscale(1);
-} */
-/* .bk_section::after{
-  content: url("./img/wave.svg");
-  fill: lightgray; */
+
+.bk_section_2{
+  background-color: lightgray;
 }
- 
+.onda_reverse{
+  transform: rotate(180deg);
+}
+
