--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Common*/
 *{
   box-sizing: border-box;
   margin: 0;
@@ -24,60 +25,34 @@ a{
   font-size: 15px;
 }
 
-/* Debug  */
-
-.debug .bk_footer{
-  background-color: #23272a;
+.onda, .onda_reverse{
+  opacity: 17%;
+  display: block;
 }
 
-.debug .bk_footer .container{
-  height: 500px;
-  background-color: green;
-}  
-
-.debug .top_footer{
-  background-color: rgba(255, 182, 193, 0.589);
-  height: 400px;
-  width: 100%
-}
-
-.debug .top_footer .col_left{
-  float: left;
-  width: 33.33%;
-  height: 100%;
-  background-color: yellow;
-}
-
-.debug .top_footer .col_right{
-  float: left;
-  width: 16.66%;
-  height: 100%;
-  background-color: blue;
-}
-
-.debug .bottom_footer{
-  height: 100%;
-  background-color: red;
-}
-
-
-
- 
-/*Header*/
-.bk_top{
-  background-image: url("./img/jumbo.png");
-  background-size: cover;
-  background-position: center;
-}
-
-#site_header{
-  padding: 20px;  
+.onda_reverse{
+  transform: rotate(180deg);
 }
 
 .container{
   width: 1070px;
   margin: auto;
 }
+
+
+
+/* Debug  */
+ 
+/*Header*/
+.bk_top{
+  background-image: url("./img/jumbo.png");
+  background-size: cover;
+}
+
+#site_header{
+  padding: 20px;  
+}
+
 
 nav .link{
   width: 60%;
@@ -108,7 +83,7 @@ nav .logo , nav .login{
 .central{
   width: 700px;
   margin: auto;
-  padding: 60px 0;
+  padding: 80px 0 145px;
   text-align: center;
   color: white;
 }
@@ -206,15 +181,85 @@ nav .logo , nav .login{
 }
 
 .bottom .button:last-child{
-  background-color: #5865f2;;
+  background-color: #5865f2;
   color: white;
 }
 
-.onda, .onda_reverse{
-  opacity: 17%;
-  display: block;
+
+
+/*Footer*/
+.bk_footer{
+  background-color: #23272a;
 }
 
-.onda_reverse{
-  transform: rotate(180deg);
+/*top_footer*/
+.top_footer{
+  padding: 40px 0;
+  border-bottom: 1px solid #5865f2;
+  width: 100%
 }
+
+.top_footer .col_left{
+  float: left;
+  width: 33.33%;
+}
+
+.top_footer .col_right{
+  float: left;
+  width: 16.66%;
+}
+
+.top_footer .col_left h4{
+  color: #5865f2;
+  font-size: 35px;
+}
+
+.top_footer .col_left img{
+  height: 18px;
+  vertical-align: middle;
+}
+
+.top_footer .col_left .lenguage{
+  color: white;
+  line-height: 53px;
+  padding: 5px 0;
+}
+
+.top_footer .col_left .lenguage .espandi{
+  vertical-align: middle;
+}
+
+.top_footer .col_right h5{
+  font-size: 18px;
+  color: #5865f2;
+  padding: 10px 0;
+}
+
+.top_footer .col_right li{
+  list-style-type: none;
+  padding: 5px 0;
+}
+
+.top_footer .col_right li a{
+  color: white;
+  text-decoration: none;
+}
+
+.top_footer .col_right li a:hover{
+  text-decoration: underline;
+}
+
+/*bottom_footer*/
+.bottom_footer .logo_down{
+  padding: 35px 0 90px;
+  position: relative;
+}
+
+.bottom_footer .logo_down .button{
+  position: absolute;
+  right: 0;
+  top: 35px;
+  color: white;
+  background-color: #5865f2;
+}
+
